# wired_services

./: pyproject.toml
src/wired_services/: interfaces.py  protocols.py  servicesold.py  servicetools.py  testit.py
src/wired_services/services/: fancy.py  hello.py  lucky.py  now.py
